--- a/views/homepage.html
+++ b/views/homepage.html
@@ -14,15 +14,19 @@
 
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
-            <nav><!--TODO make this navigation responsive first-->
-                <ul class="navlink">
-                    <li><a href="/">Homepage</a></li>
-                    <li><a href="/store">Stores</a></li>
-                    <li><a href="/delivery">Services</a></li>
-                </ul>
+            <nav>
+              <button id="toggleButton"><i class="fa fa-bars"></i></button>
+              <div class="hidden">
+                <a href="/" id="active">Homepage</a><span class="bordering"></span>
+                <a href="/store">Stores</a><span class="bordering"></span>
+                <a href="/delivery">Services</a><span class="bordering"></span>
+                <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
+              </div>
             </nav>
-            <a class="cta" href="/contactus"><button>About & Contact</button></a>
-        </header>
+          </header>
+
+          <script src="js/navigation.js"></script>
+
 
     </div>
 
@@ -85,5 +89,6 @@
             </div>
         </footer>
     </div>
+    <script src="js/navigation.js"></script>
 </body>
 </html>
