--- a/public/css/header.css
+++ b/public/css/header.css
@@ -8,9 +8,6 @@
     margin: 0;
     padding: 0;
 }
-
-/*TODO From here*/
-
 body{
     background-image: url("../imgs/69.jpg");
     background-size: 1550px 1100px;
@@ -19,59 +16,130 @@ body{
     backdrop-filter: blur(0px);
 }
 
-header li a, button{
+.bordering {
+    border-right: 2px solid rgb(18, 89, 136);
+    height: 30%;
+    display: inline-block;
+    margin: 4.2vh 0;
+  }
+
+  header {
+    background-color: rgba(0, 169, 152, 0.219);
+    border-bottom: 2px solid rgb(18, 89, 136);
+    height: 15vh;
+    width: 100%;
+  }
+
+  header nav {
+    width: 50%;
+    height: 80%;
+    float: right;
+    margin: 1.5vh 0;
+    display: flex;
+    justify-content: space-around;
+    padding-right: 10%;
+  }
+
+  .logo {
+    display: inline-block;
+    cursor: pointer;
+    margin-right: auto;
+    width: 10%;
+    padding: 3vh;
+  }
+  /*TODO - make navigation bar sticky*/
+  nav a {
+    text-decoration: none;
     font-weight: 800;
     font-size: 18px;
     font-family: 'Kanit', sans-serif;
-    color: #edf0f1;
-    text-decoration: none;
-}
-header li{
-    border-right: 2px solid rgb(18, 89, 136);
-}
-
-header{
-    background-color: rgba(0, 169, 152, 0.219);
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding: 2% 10%;
-    border-bottom: 2px solid rgb(18, 89, 136);
-}
-.logo{
-    cursor: pointer;
-    margin-right: auto;
-    max-width: 10%;
-    max-height: 8%;
-}
-.navlink{
-    list-style: none;
-    margin-right: 20px;
-}
-.navlink li{
-    display: inline-block;
-}
-.navlink li a{
+    text-align: center;
     transition: all 0.3s ease 0s;
     color: rgba(0, 136, 169, 1);
-    padding: 0px 20px;
-}
-.navlink li a:hover{
-    color: black;
-}
+    padding: 2.2vh;
+    margin: 2vh .5vh;
+    border-radius: 25px;
+  }
+  nav div{
+    display: flex;
 
-header button{
-    padding: 9px 25px;
+  }
+  nav a:hover {
+    color: black;
+  }
+
+  #active {
+    color: white;
     background-color: rgba(0, 136, 169, 1);
     border: none;
     border-radius: 50px;
     cursor: pointer;
     transition: all 0.3s ease 0s;
-}
-header button:hover{
+  }
+
+  #toggleButton {
+    display: none;
+  }
+
+  header button {
+    font-size: 1.5em;
+    width: 10vh;
+    background-color: rgba(0, 136, 169, 1);
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    transition: all 0.3s ease 0s;
+    height: 6vh;
+    position: absolute;
+    top: 4vh;
+    right: 3vh;
+  }
+
+  header button:hover {
     background-color: rgba(0, 136, 169, 0.8);
     color: black;
-}
+  }
+
+  @media only screen and (max-width: 800px) {
+    #toggleButton {
+      display: block;
+    }
+    nav div{
+        background-color: rgba(0, 136, 169, 0.8);
+        position: fixed;
+        top: 15vh;
+        width: 100%;
+        left: 0;
+        z-index: 1;
+    }
+    #active{
+        border-radius: 0;
+    }
+    nav div a{
+        display: block;
+        width: 100%;
+        border-radius: 0;
+        margin: 0;
+    }
+    .show{
+        display: block;
+    }
+    .hidden{
+        display: none;
+    }
+
+    .bordering {
+      display: none;
+    }
+
+    .logo {
+      position: absolute;
+      top: 8px;
+      left: -5px;
+      width: 20vh;
+    }
+  }
+
 footer{
     background-color: rgba(0, 169, 152, 0.319);
     width: 100%;
@@ -79,9 +147,6 @@ footer{
     margin-top: 3%;
     border-top: 4px solid black;
 }
-
-/*TODO To here*/
-
 .footer1{
     width: 33.33%;
     height: 83%;
@@ -154,7 +219,7 @@ footer{
     display: flex;
     font-size: 40px;
     font-family: 'Kanit', sans-serif;
-    margin: 3% 4%; 
+    margin: 3% 4%;
     text-shadow: 1px 1px 10px black;
 }
 .icons a{
@@ -188,7 +253,6 @@ footer{
         top: 70px;
         right: 0;
         z-index: 2;
-        
         background-color: rgba(0, 169, 152, 0.219);
     }
     footer{
@@ -235,7 +299,7 @@ footer{
         height: 40%;
         display: inline-block;
         float: none;
-        padding: 2% 5%; 
+        padding: 2% 5%;
     }
     .footer3 font{
         border-top: 4px solid black;
@@ -282,8 +346,7 @@ footer{
     #smallertext{
         font-size: 13px;
     }
-    /*TODO - fix the footer in mobile resposive,
-    Also do header*/
-
+    /*TODO - fix the footer in mobile resposive, Also do header*/
+    /*Ok! I will fix it tomorrow*/
 
 }
