--- a/views/contactus.html
+++ b/views/contactus.html
@@ -13,14 +13,15 @@
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
-                <ul class="navlink">
-                    <li><a href="/">Homepage</a></li>
-                    <li><a href="/store">Stores</a></li>
-                    <li><a href="/delivery">Services</a></li>
-                </ul>
+              <button id="toggleButton"><i class="fa fa-bars"></i></button>
+              <div class="hidden">
+                <a href="/">Homepage</a><span class="bordering"></span>
+                <a href="/store">Stores</a><span class="bordering"></span>
+                <a href="/delivery">Services</a><span class="bordering"></span>
+                <a href="/contactus"  id="active" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
+              </div>
             </nav>
-            <a class="cta" href="/contactus"><button>About & Contact</button></a>
-        </header>
+          </header>
         
     </div>
     <a href="/contact">Go to contact</a>
