--- a/views/store.html
+++ b/views/store.html
@@ -13,15 +13,16 @@
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
-                <ul class="navlink">
-                    <li><a href="/">Homepage</a></li>
-                    <li><a href="/store">Stores</a></li>
-                    <li><a href="/delivery">Services</a></li>
-                </ul>
+              <button id="toggleButton"><i class="fa fa-bars"></i></button>
+              <div class="hidden">
+                <a href="/">Homepage</a><span class="bordering"></span>
+                <a href="/store" id="active">Stores</a><span class="bordering"></span>
+                <a href="/delivery">Services</a><span class="bordering"></span>
+                <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
+              </div>
             </nav>
-            <a class="cta" href="/contactus"><button>About & Contact</button></a>
-        </header>
-        
+          </header>
+
     </div>
     <a href="/items">Go to items</a>
     <div class="footerclass">
@@ -35,7 +36,7 @@
 
 
 
-            
+
             <div class="footer2">
                 <ul>
                     <li><a href="#">Pages</a></li>
