--- a/views/contactus.html
+++ b/views/contactus.html
@@ -8,8 +8,6 @@
     <title>Contact Us</title>
 </head>
 <body class="mainn">
-    <div>
-
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
@@ -21,11 +19,10 @@
                 <a href="/contactus"  id="active" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
               </div>
             </nav>
-          </header>
-        
-    </div>
+          
+        </header>
+        <script src="js/navigation.js"></script>
     <a href="/contact">Go to contact</a>
-    
     <div class="footerclass">
         <footer>
             <div class="footer1">
