--- a/views/delivery.html
+++ b/views/delivery.html
@@ -8,7 +8,6 @@
     <title>Delivery</title>
 </head>
 <body class="mainn">
-    <div>
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
@@ -20,9 +19,9 @@
                 <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
               </div>
             </nav>
-          </header>
-    </div>
-
+          
+        </header>
+        <script src="js/navigation.js"></script>
     <a href="/services">Go to services</a>
     <div class="footerclass">
         <footer>
