--- a/views/items.ejs
+++ b/views/items.ejs
@@ -9,9 +9,8 @@
     <title>Website4MyMomsBusiness</title>
 </head>
 <body class="mainn">
-    <div>
         <header>
-            <img class="logo" src="imgs/sdwlogo.png" alt="logo">
+            <img class="logo" src="/imgs/sdwlogo.png" alt="logo">
             <nav>
               <button id="toggleButton"><i class="fa fa-bars"></i></button>
               <div class="hidden">
@@ -21,8 +20,8 @@
                 <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
               </div>
             </nav>
-          </header>
-    </div>
+        </header>
+        <script src="/js/navigation.js"></script>
     <section>
         <div id="left">
             <img src="/imgs/item_photos/<%= image %>" alt="" id="image">
