--- a/public/css/header.css
+++ b/public/css/header.css
@@ -28,6 +28,11 @@ body{
     border-bottom: 2px solid rgb(18, 89, 136);
     height: 15vh;
     width: 100%;
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    transition: 100ms linear;
   }
 
   header nav {
@@ -37,7 +42,6 @@ body{
     margin: 1.5vh 0;
     display: flex;
     justify-content: space-around;
-    padding-right: 10%;
   }
 
   .logo {
@@ -62,6 +66,7 @@ body{
   }
   nav div{
     display: flex;
+    margin-left: 20%;
 
   }
   nav a:hover {
@@ -100,17 +105,19 @@ body{
     color: black;
   }
 
-  @media only screen and (max-width: 800px) {
+  @media only screen and (max-width: 851px) {
     #toggleButton {
       display: block;
     }
     nav div{
+        display: inline-block;
+        margin: 0;
         background-color: rgba(0, 136, 169, 0.8);
-        position: fixed;
         top: 15vh;
+        position: absolute;
         width: 100%;
-        left: 0;
-        z-index: 1;
+        left: 0px;
+        z-index: 0;
     }
     #active{
         border-radius: 0;
@@ -122,10 +129,12 @@ body{
         margin: 0;
     }
     .show{
-        display: block;
+        opacity: 1;
+        visibility: visible;
     }
     .hidden{
-        display: none;
+        opacity: 0;
+        visibility: hidden;
     }
 
     .bordering {
@@ -247,14 +256,7 @@ footer{
 
 
 
-@media only screen and (max-width: 800px){
-    header{
-        width: 100%;
-        top: 70px;
-        right: 0;
-        z-index: 2;
-        background-color: rgba(0, 169, 152, 0.219);
-    }
+@media only screen and (max-width: 851px){
     footer{
         display: inline-block;
         width: 100%;
