--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -19,17 +19,17 @@
 .mainpage{
     width: 80%;
     height: 550px;
-
     margin-top: 45px;
     margin-left: 10%;
     border-radius: 20px;
     margin-right: 15%;
     overflow: hidden;
+    display: flex;
+    flex-direction: row;
 }
 .mainpage2{
-    width: 40%;
+    flex: 40%;
     height: inherit;
-
     float: left;
     text-align: center;
     color: rgba(0, 136, 169, 1.0);
@@ -49,7 +49,7 @@
     padding-top: -15px;
 }
 .mainpage3{
-    width: 60%;
+    flex: 60%;
     height: inherit;
     float: right;
     padding: 10% 0 0 0;
@@ -59,6 +59,16 @@
     font-family: 'Fjalla One', sans-serif;
     animation: shadowmove 5s infinite;
     padding-right: 0%;
+}
+
+@media screen and (max-width: 851px) {
+    .mainpage{
+        flex-direction: column;
+        height: auto;
+    }
+    #borderleft{
+        display: none;
+    }
 }
 @keyframes shadowmove {
     70%{text-shadow: 10px 10px 30px rgb(80, 235, 127)}
