--- a/views/homepage.html
+++ b/views/homepage.html
@@ -10,8 +10,6 @@
     <title>Home-ShweDuWun</title>
 </head>
 <body class="mainn">
-    <div>
-
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
@@ -23,32 +21,29 @@
                 <a href="/contactus" style="width: auto; padding: 2.2vh 1.5vh;">About & Contact</a>
               </div>
             </nav>
-          </header>
 
-          <script src="js/navigation.js"></script>
-
-
-    </div>
-
-
+        </header>
+        <script src="js/navigation.js"></script>
+      <script src="js/navigation.js"></script>
     <div class="mainpage">
-
         <div class="mainpage2">
             <img class="dttimg" src="imgs/dtt.png">
             <p>Client's Happiness Is Our Goal</p>
         </div>
-
         <div class="mainpage3">
             <div id="borderleft"></div>
             <h1>Buying more than 1,000,000 Forever Living Products cost will be off 10% of the  price.</h1>
             <h3>We are sending and delivering our products to every town in Myanmar.
                 Please contact us fast; we will transfer our products to every client within a week.</h3>
         </div>
-
-
-        <!--TODO  -->
     </div>
-    <a href="/card">Card</a>
+    <section class="toShop">
+
+        <!--TODO toShop-->
+    </section>
+    <section class="deli">
+        <!--TODO deli-->
+    </section>
 
     <div class="footerclass">
         <footer>
