--- a/views/homepage.html
+++ b/views/homepage.html
@@ -9,7 +9,7 @@
     <script src="https://kit.fontawesome.com/ef09da54b9.js" crossorigin="anonymous"></script>
     <title>Home-ShweDuWun</title>
 </head>
-<body class="mainn">
+<body class="mainn" id="homebody">
         <header>
             <img class="logo" src="imgs/sdwlogo.png" alt="logo">
             <nav>
@@ -37,8 +37,29 @@
                 Please contact us fast; we will transfer our products to every client within a week.</h3>
         </div>
     </div>
-    <section class="toShop">
+    <section class="toShop" id="toShop">
+        <div class="TV Tleft" id="Tleft">
+            <div class="cut">
+                <div class="images">
+                    <img src="imgs/item_photos/P01.png" alt="">
+                    <img src="imgs/item_photos/P02.png" alt="">
+                    <img src="imgs/item_photos/P01.png" alt="">
+                    <img src="imgs/item_photos/P02.png" alt="">
+                </div>
+            </div>
 
+        </div>
+        <div class="TV Tright">
+            <div class="cut">
+                <div class="images">
+                    <img src="imgs/item_photos/P02.png" alt="">
+                    <img src="imgs/item_photos/P01.png" alt="">
+                    <img src="imgs/item_photos/P02.png" alt="">
+                    <img src="imgs/item_photos/P01.png" alt="">
+                </div>
+            </div>
+        </div>
+        <a href="/store">To Store</a>
         <!--TODO toShop-->
     </section>
     <section class="deli">
