--- a/views/delivery.html
+++ b/views/delivery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/header.css" type="text/css" />
+    <link rel="stylesheet" href="css/delivery.css" />
     <script
       src="https://kit.fontawesome.com/ef09da54b9.js"
       crossorigin="anonymous"
@@ -27,7 +28,90 @@
       </nav>
     </header>
     <script src="js/navigation.js"></script>
-    <a href="/services">Go to services</a>
+    <section class="brief">
+      <h1>Delivery?</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odio
+        explicabo consequuntur provident facere minus praesentium, aut qui
+        ducimus debitis, hic molestias esse eligendi quidem temporibus vero
+        veniam repellendus enim! Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Maiores ad maxime sed expedita saepe obcaecati.
+        Voluptas distinctio, eveniet quia, delectus voluptatibus nostrum quaerat
+        voluptates qui tenetur placeat est laboriosam veniam. Lorem ipsum dolor
+        sit amet consectetur adipisicing elit. Reprehenderit asperiores, ex
+        debitis explicabo cum blanditiis vitae! Ex quasi voluptate illum, fuga
+        doloribus esse id ea error ipsum! Tempora, facilis provident.
+      </p>
+    </section>
+    <section class="mainsection">
+      <div class="cities">
+        <h1>Find your city here</h1>
+        <input type="text" name="" placeholder="Type here" id="filter_users" />
+        <ul id="city-list"></ul>
+      </div>
+      <hr />
+      <div class="search">
+        <h1>Choose your region</h1>
+        <button class="btn">
+          Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+        <button class="btn">
+          Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+        <button class="btn">
+          Yangon <i class="fa-solid fa-arrow-down fa-beat-fade"></i>
+        </button>
+        <div class="content">
+          <table>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+            <tr>
+              <td>Township</td>
+              <td>Township</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
+    <script src="js/delivery.js"></script>
     <div class="footerclass">
       <footer>
         <div class="footer1">
