--- a/views/items.ejs
+++ b/views/items.ejs
@@ -30,6 +30,7 @@
     <script src="/js/navigation.js"></script>
     <section>
       <div id="left">
+        <h1><%= name %></h1>
         <img src="/imgs/item_photos/<%= image %>" alt="" id="image" />
         <p id="price"><%= price %></p>
       </div>
