--- a/public/css/header.css
+++ b/public/css/header.css
@@ -7,6 +7,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 body {
   background-image: url("../imgs/69.jpg");
