--- a/views/homepage.html
+++ b/views/homepage.html
@@ -73,6 +73,7 @@
     <section class="deli" id="deli_id">
       <h1>Delivery?</h1>
       <div class="box">
+        <div class="box1">
         <img src="imgs/delivery.png" alt="" id="deli_img" />
         <p>
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque
@@ -86,6 +87,7 @@
           about
           <a href="/delivery">DELIVERY</a>
         </p>
+      </div>
       </div>
       <!--TODO deli-->
     </section>
@@ -107,7 +109,7 @@
             <li><a href="#">about</a></li>
             <li><a href="#">contact</a></li>
             <br />
-            <li id="smallertext"><a href="#">Contact2WebsiteDevelopers</a></li>
+            <li id="smallertext"><a href="#">Contact2WebsiteDeveloper</a></li>
           </ul>
         </div>
         <div class="footer3">
