--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,10 +10,10 @@
 }
 body {
   background-image: url("../imgs/69.jpg");
-  background-size: 1550px 1100px;
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: scroll;
   backdrop-filter: blur(0px);
+  /*TODO - fix background img size*/
 }
 
 .bordering {
@@ -24,7 +24,8 @@ body {
 }
 
 header {
-  background-color: rgba(0, 169, 152, 0.519);
+  display: block;
+  background-color: rgba(0, 169, 152, 1.0);
   border-bottom: 2px solid rgb(18, 89, 136);
   height: 15vh;
   width: 100%;
