--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -35,9 +35,10 @@
   position: relative;
 }
 #borderleft {
+  margin-left: -34px;
   position: absolute;
   border-left: 4px dashed rgb(9, 239, 189);
-  top: 13%;
+  top: 12%;
   height: 45vh;
 }
 .mainpage2 p {
@@ -47,7 +48,7 @@
   flex: 60%;
   height: inherit;
   float: right;
-  padding: 10% 0 0 0;
+  padding: 10% 0 0 8%;
   text-align: center;
   color: rgba(0, 136, 169, 1);
   font-size: 24px;
@@ -119,7 +120,7 @@
   grid-template-columns: auto auto;
   gap: 15px;
   text-align: center;
-  margin: 5vh 7%;
+  margin: 20vh 7%;
   border: 4px solid black;
   border-radius: 0 0 25px 25px;
 }
@@ -152,7 +153,7 @@
 }
 .cut {
   height: 80%;
-  width: 95%;
+  width: 91%;
   overflow: hidden;
   margin: auto auto;
 }
@@ -194,9 +195,9 @@
 
 /*Start Deli*/
 .deli {
-  width: 90%;
+  width: 85%;
   height: auto;
-  margin: 0 5%;
+  margin: 0 7.5%;
   position: relative;
   padding-top: 25px;
 }
@@ -211,15 +212,19 @@
   line-height: 50px;
   left: 50%;
   transform: translate(-50%);
+  z-index: 1;
 }
 
 .box {
   margin-top: 25px;
   border: 3px solid black;
-  background-image: url("../imgs/sample.png");
+  background-image: url("../imgs/iconsdesign.png");
   background-position: center;
-  background-size: 100;
+  background-size: 450px;
   padding: 35px 5px 0 10px;
+}
+.box1{
+  background-image: url("../imgs/iconsdesign.png");
 }
 
 .box img {
