--- a/views/delivery.html
+++ b/views/delivery.html
@@ -29,7 +29,7 @@
     </header>
     <script src="js/navigation.js"></script>
     <section class="brief">
-      <h1>Delivery?</h1>
+      <h1 id="deliveryh1">Delivery?</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque odio
         explicabo consequuntur provident facere minus praesentium, aut qui
