--- a/views/homepage.html
+++ b/views/homepage.html
@@ -12,7 +12,7 @@
     ></script>
     <title>Home-ShweDuWun</title>
   </head>
-  <body class="mainn" id="homebody">
+  <body class="mainn">
     <header>
       <img class="logo" src="imgs/sdwlogo.png" alt="logo" />
       <nav>
@@ -74,20 +74,20 @@
       <h1>Delivery?</h1>
       <div class="box">
         <div class="box1">
-        <img src="imgs/delivery.png" alt="" id="deli_img" />
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque
-          similique quaerat itaque temporibus, distinctio aspernatur ipsam
-          aliquid deleniti ut praesentium beatae non eius? Ipsum recusandae
-          illum voluptatem labore assumenda ipsam! Lorem ipsum, dolor sit amet
-          consectetur adipisicing elit. Nihil, mollitia? Omnis est voluptatum
-          sed quo tempora, voluptas quos, consectetur reiciendis dolor eos earum
-          itaque? Cum laudantium at quam ut aperiam! Lorem ipsum, dolor sit amet
-          consectetur adipisicing elit. minima fugie. Click here to know more
-          about
-          <a href="/delivery">DELIVERY</a>
-        </p>
-      </div>
+          <img src="imgs/delivery.png" alt="" id="deli_img" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloremque
+            similique quaerat itaque temporibus, distinctio aspernatur ipsam
+            aliquid deleniti ut praesentium beatae non eius? Ipsum recusandae
+            illum voluptatem labore assumenda ipsam! Lorem ipsum, dolor sit amet
+            consectetur adipisicing elit. Nihil, mollitia? Omnis est voluptatum
+            sed quo tempora, voluptas quos, consectetur reiciendis dolor eos
+            earum itaque? Cum laudantium at quam ut aperiam! Lorem ipsum, dolor
+            sit amet consectetur adipisicing elit. minima fugie. Click here to
+            know more about
+            <a href="/delivery">DELIVERY</a>
+          </p>
+        </div>
       </div>
       <!--TODO deli-->
     </section>
