--- a/public/css/header.css
+++ b/public/css/header.css
@@ -12,8 +12,9 @@
 body {
   background-image: url("../imgs/69.jpg");
   background-position: center;
-  background-attachment: scroll;
+  background-size: 100% 100%;
   backdrop-filter: blur(0px);
+  background-repeat: no-repeat;
   /*TODO - fix background img size*/
 }
 
@@ -26,14 +27,17 @@ body {
 
 header {
   display: block;
-  background-color: rgba(0, 169, 152, 1.0);
+  background-color: rgba(0, 169, 152, 1);
   border-bottom: 2px solid rgb(18, 89, 136);
   height: 15vh;
   width: 100%;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 2;
+  left: 0;
+  right: 0;
+  bottom: auto;
+  z-index: 999;
   transition: 100ms linear;
 }
 
