completed contact us mobile version

--- a/views/contactus.html
+++ b/views/contactus.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/header.css" type="text/css" />
+    <link rel="stylesheet" href="css/mobile_view/contact_mobile.css" />
+    <link rel="stylesheet" href="css/contact.css" />
     <script
       src="https://kit.fontawesome.com/ef09da54b9.js"
       crossorigin="anonymous"
@@ -29,7 +31,100 @@
       </nav>
     </header>
     <script src="js/navigation.js"></script>
-    <a href="/contact">Go to contact</a>
+
+    <section class="desktop">
+      <div class="left" id="left">
+        <h1>Shwe Du Wun</h1>
+        <div class="sub_left">
+          <h2>You can contact us via</h2>
+          <p>
+            We give 24/7 services. Lorem ipsum dolor sit amet consectetur
+            adipisicing elit. Sint adipisci dolore nisi excepturi sed, quae qui.
+          </p>
+          <div class="sub_left1">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href="" style="background-color: green"
+              ><i class="fa-brands fa-facebook-messenger"></i
+            ></a>
+            <a href=""><i class="fa-solid fa-envelope"></i></a>
+            <a href=""><i class="fa-solid fa-phone"></i></a>
+          </div>
+        </div>
+      </div>
+
+      <div class="right" id="right">
+        <h1>Let us know</h1>
+        <p>We will contact u back after a while.</p>
+        <form action="">
+          <div class="name">
+            <i class="fa-solid fa-user"></i>
+            <input type="text" placeholder="Enter your  Name" />
+          </div>
+          <div class="subs">
+            <div class="subemail">
+              <i class="fa-solid fa-envelope"></i>
+              <input
+                type="email"
+                name=""
+                id=""
+                placeholder="Enter your Email"
+              />
+            </div>
+            <div class="subnumber">
+              <i class="fa-solid fa-mobile"></i
+              ><input
+                type="number"
+                name=""
+                id=""
+                placeholder="Enter your phone number"
+              />
+            </div>
+          </div>
+          <textarea
+            name=""
+            id=""
+            cols="30"
+            rows="10"
+            placeholder="Type your message here."
+          ></textarea>
+          <button type="submit">Send</button>
+        </form>
+      </div>
+    </section>
+
+    <section class="mobile" id="mobile">
+      <h1>Shwe Du Wun</h1>
+      <h2>Let us know</h2>
+      <p>We will contact u back after a while.</p>
+      <form action="" class="formMobile">
+        <div class="inputs">
+          <i class="fa-solid fa-user"></i>
+          <input type="text" placeholder="Enter your  Name" />
+        </div>
+        <div class="inputs">
+          <i class="fa-solid fa-envelope"></i>
+          <input type="email" name="" id="" placeholder="Enter your Email" />
+        </div>
+        <div class="inputs">
+          <i class="fa-solid fa-mobile"></i
+          ><input
+            type="number"
+            name=""
+            id=""
+            placeholder="Enter your phone number"
+          />
+        </div>
+        <textarea
+          name=""
+          id=""
+          cols="30"
+          rows="10"
+          placeholder="Type your message here."
+        ></textarea>
+        <button type="submit">Send</button>
+      </form>
+    </section>
+
     <div class="footerclass">
       <footer>
         <div class="footer1">
